--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "eslint src --fix && prettier --write src"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -14,8 +15,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.7.2",
     "lucide-react": "^0.312.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
@@ -25,10 +28,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
     "autoprefixer": "^10",
-    "eslint": "^8",
+    "eslint": "^8.56.0",
     "eslint-config-next": "13.5.6",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.4",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
