--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -39,6 +40,7 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.2.4",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
