--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "firebase": "^10.7.2", 
+    "firebase": "^10.7.2",
     "firebase-admin": "^11.5.0",
     "lucide-react": "^0.312.0",
     "next": "13.5.6",
