--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jotai": "^2.6.4",
     "lucide-react": "^0.312.0",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
