--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "format": "eslint src --fix && prettier --write src",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "bundle-analyzer": "ANALYZE=true next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.16",
     "@aws-sdk/client-s3": "^3.501.0",
     "@hookform/resolvers": "^3.3.4",
+    "@next/bundle-analyzer": "^14.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
