--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dayjs": "^1.11.10",
     "jotai": "^2.6.4",
     "lucide-react": "^0.312.0",
-    "next": "13.5.6",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
