--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "sonner": "^1.4.0",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
