--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "format": "eslint src --fix && prettier --write src",
     "prepare": "husky install",
-    "bundle-analyzer": "ANALYZE=true next build"
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.16",
