--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,35 @@
 {
+  "plugins": ["unused-imports"],
   "extends": [
+    "eslint:recommended",
     "next/core-web-vitals",
-    "plugin:import/recommended",
-    "plugin:import/warnings",
+    "plugin:tailwindcss/recommended",
     "prettier"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest"
+    "project": "./tsconfig.json"
+  },
+  "rules": {
+    "unused-imports/no-unused-imports": "error",
+    "react/jsx-sort-props": "error",
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "internal", "parent", "sibling", "index", "object", "type"],
+        "newlines-between": "always",
+        "pathGroupsExcludedImportTypes": ["builtin"],
+        "pathGroups": [
+          {
+            "pattern": "@/components/**",
+            "group": "internal",
+            "position": "before"
+          }
+        ],
+        "alphabetize": {
+          "order": "asc"
+        }
+      }
+    ]
   }
 }
