--- a/package.json
+++ b/package.json
@@ -53,12 +53,15 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10",
     "eslint": "^8.56.0",
     "eslint-config-next": "13.5.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-tailwindcss": "^3.14.2",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
