--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "postcss": "^8",
     "prettier": "^3.2.4",
     "prisma": "^5.9.0",
+    "swc": "^1.0.11",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
