--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.9.0",
     "@prisma/client": "^5.9.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
