--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-select": "^5.8.0",
     "sonner": "^1.4.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
