--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "embla-carousel-react": "^8.0.0",
     "jotai": "^2.6.4",
     "lucide-react": "^0.312.0",
     "next": "^14.1.0",
