--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "winston": "^3.13.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
