--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0",
     "jotai": "^2.6.4",
+    "jsonapi-serializer": "^3.6.9",
     "lucide-react": "^0.312.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
@@ -47,16 +48,19 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "winston": "^3.13.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@prisma/client": "^5.9.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonapi-serializer": "^3.6.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10",
